--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jc-project",
+  "name": "cateyes",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -7,7 +7,10 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "better-scroll": "^1.13.2",
     "vue": "^2.5.17",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1"
   },
